tests/spec/parse/snapshots/struct_literal_mixed.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(x: int, base: Point) {
    let p = Point { x, y: 10, ..base };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "base",
                    span: Span {
                        file_id: 0,
                        byte_offset: 17,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Point",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 23,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "p",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 38,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Point",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "x",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 50,
                                        byte_length: 1,
                                    },
                                    value: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 50,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                                StructFieldAssignment {
                                    name: "y",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 53,
                                        byte_length: 1,
                                    },
                                    value: Literal {
                                        literal: Integer {
                                            value: 10,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 56,
                                            byte_length: 2,
                                        },
                                    },
                                },
                            ],
                            spread: From(
                                Identifier {
                                    value: "base",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 62,
                                        byte_length: 4,
                                    },
                                    resolution: Unresolved,
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 42,
                                byte_length: 26,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 34,
                            byte_length: 34,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 41,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 70,
        },
    },
]
