tests/spec/parse/snapshots/struct_literal_nested.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(user: User) {
    let data = Data {
      id: 1,
      payload: Payload { user, status: "active" },
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "user",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "User",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "data",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 4,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Data",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "id",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 47,
                                        byte_length: 2,
                                    },
                                    value: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 51,
                                            byte_length: 1,
                                        },
                                    },
                                },
                                StructFieldAssignment {
                                    name: "payload",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 58,
                                        byte_length: 7,
                                    },
                                    value: StructCall {
                                        name: "Payload",
                                        field_assignments: [
                                            StructFieldAssignment {
                                                name: "user",
                                                name_span: Span {
                                                    file_id: 0,
                                                    byte_offset: 77,
                                                    byte_length: 4,
                                                },
                                                value: Identifier {
                                                    value: "user",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 77,
                                                        byte_length: 4,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                            },
                                            StructFieldAssignment {
                                                name: "status",
                                                name_span: Span {
                                                    file_id: 0,
                                                    byte_offset: 83,
                                                    byte_length: 6,
                                                },
                                                value: Literal {
                                                    literal: String {
                                                        value: "active",
                                                        raw: false,
                                                    },
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 91,
                                                        byte_length: 8,
                                                    },
                                                },
                                            },
                                        ],
                                        spread: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 67,
                                            byte_length: 34,
                                        },
                                    },
                                },
                            ],
                            spread: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 70,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 81,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 88,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 108,
        },
    },
]
