tests/spec/parse/snapshots/struct_literal_shorthand.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(x: int, y: int) {
    let p = Point { x, y };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "y",
                    span: Span {
                        file_id: 0,
                        byte_offset: 17,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 20,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "p",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Point",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "x",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 1,
                                    },
                                    value: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 45,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                                StructFieldAssignment {
                                    name: "y",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 48,
                                        byte_length: 1,
                                    },
                                    value: Identifier {
                                        value: "y",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 48,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                            ],
                            spread: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 14,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 29,
                            byte_length: 22,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 25,
                    byte_length: 29,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
]
