tests/spec/parse/snapshots/struct_literal_spread.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(defaults: Config) {
    let cfg = Config { enabled: true, ..defaults };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "defaults",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 8,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Config",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 6,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "cfg",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Config",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "enabled",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 50,
                                        byte_length: 7,
                                    },
                                    value: Literal {
                                        literal: Boolean(
                                            true,
                                        ),
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 59,
                                            byte_length: 4,
                                        },
                                    },
                                },
                            ],
                            spread: From(
                                Identifier {
                                    value: "defaults",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 67,
                                        byte_length: 8,
                                    },
                                    resolution: Unresolved,
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 41,
                                byte_length: 36,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 46,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 53,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 79,
        },
    },
]
