tests/spec/parse/snapshots/struct_multiple_generics.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Pair<K, V> {
    key: K,
    value: V,
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Pair",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 4,
        },
        generics: [
            Generic {
                name: "K",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 13,
                    byte_length: 1,
                },
            },
            Generic {
                name: "V",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 1,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "key",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 23,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "K",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 33,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "V",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 40,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 43,
        },
    },
]
